--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,6 +22,8 @@ services:
   api:
     container_name: quizzer-api
     image: quizzer/api
+    volumes:
+      - /etc/quizzer/api:/etc/quizzer/api
     build:
       context: .
       dockerfile: Dockerfile
