--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,9 @@ DB_SOURCE=
 SERVER_ADDRESS=
 TOKEN_SYMMETRIC_KEY=
 ACCESS_TOKEN_DURATION=
-
+REFRESH_TOKEN_DURATION=
+SMTP_AUTH_ADDRESS=
+SMTP_SERVER_ADDRESS=
+EMAIL_SENDER_NAME=
+EMAIL_SENDER_ADDRESS=
+EMAIL_SENDER_PASSWORD=
